--- a/app/frontend/static/css/admin-styles.css
+++ b/app/frontend/static/css/admin-styles.css
@@ -139,7 +139,7 @@ body {
    ==================================== */
 
 .main-content {
-    margin-left: 280px;
+    margin-left: 0;
     min-height: 100vh;
     background: var(--bg-lighter);
     display: flex;
@@ -1097,12 +1097,8 @@ body {
    ==================================== */
 
 @media (max-width: 1024px) {
-    .sidebar {
-        width: 240px;
-    }
-
     .main-content {
-        margin-left: 240px;
+        margin-left: 0;
     }
 
     .endpoint-card {
@@ -1115,16 +1111,6 @@ body {
 }
 
 @media (max-width: 768px) {
-    .sidebar {
-        position: absolute;
-        left: -280px;
-        width: 280px;
-    }
-
-    .sidebar.open {
-        left: 0;
-    }
-
     .main-content {
         margin-left: 0;
     }
