--- a/app/frontend/templates/admin/analytics.html
+++ b/app/frontend/templates/admin/analytics.html
@@ -169,6 +169,8 @@
     </script>
 
     <!-- Scripts -->
+    <script src="/static/js/services/kpi-service.js"></script>
+    <script src="/static/js/services/background-job-search.js"></script>
     <script src="/static/js/navbar-manager.js"></script>
     <script src="/static/js/pages/admin-analytics.js"></script>
 </body>
